# lifesim

./: .gitignore  CMakeLists.txt  Proposal.md  README.md
include/: Brain.hpp  Constants.hpp  Event.hpp  Figures.hpp  Food.hpp  Genome.hpp  Math.hpp  Object.hpp  Player.hpp  WindowController.hpp
src/: Brain.cpp  CMakeLists.txt  Figures.cpp  Genome.cpp  Player.cpp  WindowController.cpp  graphs.cpp
